# SciVenia-beta

./: LICENSE  README.md  index.html  package-lock.json  package.json
backend/: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  temp.js
backend/DB/authors/: 4-CJclQAAAAJ  4pWyfIQAAAAJ  5n9E1cMAAAAJ  CpkcBHYAAAAJ  FXsV-ikAAAAJ  FtE4rAEAAAAJ  GOOxD60AAAAJ  HgjBXY0AAAAJ  Iem4ceQAAAAJ  MAylmIEAAAAJ  MZggB6kAAAAJ  NibAlbMAAAAJ  OTeSCfEAAAAJ  Oj0F9AkAAAAJ  Pn0T4rQAAAAJ  PwYT6EMAAAAJ  QBVR0_sAAAAJ  Se4szUAAAAAJ  aZ6Cuh0AAAAJ  fEAdMGAAAAAJ  giSjEBMAAAAJ  iMMncw8AAAAJ  iyEhyh4AAAAJ  jCcimzUAAAAJ  jUg1yFcAAAAJ  lV5JQ08AAAAJ  pagYxiQAAAAJ  q5vgzKgAAAAJ  qk4OUXEAAAAJ  rca9ZrsAAAAJ  sKzmsq8AAAAJ  saLJmksAAAAJ  ul-dSQQAAAAJ  vXJ89Z4AAAAJ  xQyve-kAAAAJ  ya3htIoAAAAJ
backend/DB/coauthors/: jUg1yFcAAAAJ
backend/python_api/: api.py
backend/src/: graph.rs  main.rs  requests_to_python.rs
frontend/: README.md  index.html  package-lock.json  package.json
frontend/public/: data.json
frontend/src/: App.jsx  data.json  index.css
frontend/src/algorithms/: getCommonPublications.jsx
public/: data.json
src/: App.jsx  README.md  data.json  index.css  package.json
src/algorithms/: collabFinder.jsx  jsonConverter.jsx
src/components/: Account.jsx  Cards.jsx  Cards.module.css  Graph.jsx  Modal.css  Search.jsx  SingleCard.jsx
src/hooks/: jsonConverter.jsx  useFetch.jsx
src/layouts/: CollabsLayout.jsx  GraphLayout.css  GraphLayout.jsx  RootLayout.css  RootLayout.jsx
src/pages/: Collaborations.module.css  PageNotFound.css
src/public/: data.json
src/src/: index.css
(+32 files in other folders)
