[package]
name = "RUSTbackEND"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.85"
rspotify = "0.11.5"
serde = { version = ">=1.0", features = ["derive"] }
rocket = {version = "0.5.0-rc.2", features = ["json"]}
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
urlencoding = "2.1.2"

[profile.release]
opt-level = 3